<resources>
    <string name="app_name">fiveChess</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_Start">开始游戏</string>
    <string name="btn_exit">退出</string>
    <string name="btn_music">音乐</string>
    <string name="fiveChess">五子棋</string>
    <string name="whiteChess">白棋</string>
    <string name="blackChess">黑棋</string>
    <string name="has_chess_there">此位置已经有棋子</string>
    <string name="restart">是否重新开始</string>
    <string name="back_to_menu">返回菜单</string>
    <string name="ok">确定</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
	<string name="rule">五子棋是一种两人对弈的纯策略型棋类游戏，通常双方分别使用黑白两色的棋子，轮流下在棋盘直线与横线的交叉点上，先在横线、直线或斜对角线上形成5子连线者获胜。</string>
</resources>
