<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_Start" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_btn"
            android:text="@string/btn_music"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"/>

		<Button
			android:id="@+id/helper_btn"
			android:layout_width="@dimen/btn_width"
			android:layout_height="wrap_content"
			android:text="@string/help" />

		<Button
			android:id="@+id/about_btn"
			android:layout_width="@dimen/btn_width"
			android:layout_height="wrap_content"
			android:text="@string/about" />

		<Button
            android:id="@+id/button2"
			android:layout_width="@dimen/btn_width"
			android:layout_height="wrap_content"
            android:action="onClickE"
            android:text="@string/btn_exit" />

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
